Update Computer vision project notebook.ipynb

--- a/Computer vision project notebook.ipynb
+++ b/Computer vision project notebook.ipynb
@@ -46,7 +46,7 @@
     }
    ],
    "source": [
-    "path = 'G:/handas/Digital project/Vision_Project_Startup_Code/Vision_Project_Startup_Code/test_dataset/IMG/*'\n",
+    "path = '/media/humi/01D6B145D04C7620/handas/Digital project/Vision_Project_Startup_Code/Vision_Project_Startup_Code/test_dataset/IMG/*'\n",
     "img_list = glob.glob(path)\n",
     "idx = np.random.randint(0, len(img_list) - 1)\n",
     "image = mpimg.imread(img_list[idx])\n",
@@ -83,8 +83,8 @@
     }
    ],
    "source": [
-    "example_grid = 'G:/handas/Digital project/Vision_Project_Startup_Code/Vision_Project_Startup_Code/calibration_images/example_grid1.jpg'\n",
-    "example_rock = 'G:/handas/Digital project/Vision_Project_Startup_Code/Vision_Project_Startup_Code/calibration_images/example_rock1.jpg'\n",
+    "example_grid = '/media/humi/01D6B145D04C7620/handas/Digital project/Vision_Project_Startup_Code/Vision_Project_Startup_Code/calibration_images/example_grid1.jpg'\n",
+    "example_rock = '/media/humi/01D6B145D04C7620/handas/Digital project/Vision_Project_Startup_Code/Vision_Project_Startup_Code/calibration_images/example_rock1.jpg'\n",
     "grid_img = mpimg.imread(example_grid)\n",
     "rock_img = mpimg.imread(example_rock)\n",
     "fig = plt.figure(figsize = (12, 3))\n",
